--- a/medial-queries3/main.css
+++ b/medial-queries3/main.css
@@ -1,3 +1,103 @@
 body {
   background: peachpuff;
+  margin: 0;
+  text-align: center;
+}
+
+*{
+  border: 1px solid white;
+}
+
+.container .work{
+  display: flex;
+  min-height: 100vh;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.a {
+  max-width: 100%;
+  flex-basis: 100%;
+  flex-grow: 1;
+  height: 20vh;
+}
+
+.work{
+  max-height: 40vh;
+  flex-grow: 2;
+}
+
+.b{
+  height: 50%;
+  width: 33%;
+  flex-grow: 1;
+  min-width: 30%;
+  min-height: 30vh;
+}
+
+.c {
+  height: 20vh;
+  width: 33%;
+  flex-grow: 1;
+  min-width: 30%;
+  min-height: 30vh;
+}
+
+.d {
+  height: 50%;
+  width: 33%;
+  flex-grow: 1;
+  min-width: 30%;
+  min-height: 30vh;
+}
+
+.e {
+  height: 50%;
+  width: 33%;
+  flex-grow: 1;
+  min-height: 30vh;
+  min-width: 30%;
+}
+
+.f {
+  width: 33%;
+  height: 50%;
+  flex-grow: 30%;
+  min-width: 30%;
+  min-height: 30vh;
+}
+
+.g {
+  height: 50%;
+  width: 33%;
+  flex-grow: 1;
+  min-width: 30%;
+  min-height: 30vh;
+}
+
+.h{
+  height: 35vh;
+  max-width: 100%;
+  flex-basis: 100%;
+  flex-grow: 2;
+}
+
+@media (min-width: 600px) {
+  .container{
+    flex-direction: column;
+  }
+  .work{
+    flex-basis: 80%;
+    max-width: 80%;
+  }
+  .h{
+    flex: 1;
+    align-self: end;
+    align-self: right;
+    max-width: 20%;
+    min-height: 100vh;
+    flex-basis: 20%;
+    width: 20%;
+  }
 }
